# sphinx-revealjs-quickstart

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  testing.yml
src/sphinx_revealjs_quickstart/: __main__.py
src/sphinx_revealjs_quickstart/templates/: Makefile.jinja  conf_append.py.jinja  page.html.jinja  publish-pages.yml.jinja
tests/: test_main.py
tests/expected/: Makefile  common.css.jinja  conf.py  page.html  publish-pages.yml
