[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-revealjs-quickstart"
description = "Quickstart CLI to scaffold Sphinx + sphinx-revealjs presentation projects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "nikkie", email = "takuyafjp+develop@gmail.com" }]
keywords = ["sphinx", "sphinx-revealjs", "revealjs", "presentation", "quickstart"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Sphinx",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Software Development :: Documentation",
]
dynamic = ["version"]
dependencies = ["Sphinx"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-randomly",
]

[project.urls]
Repository = "https://github.com/ftnext/sphinx-revealjs-quickstart"
Issues = "https://github.com/ftnext/sphinx-revealjs-quickstart/issues"

[project.scripts]
sphinx-revealjs-quickstart = "sphinx_revealjs_quickstart.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "sphinx_revealjs_quickstart.__version__" }

[tool.setuptools.package-data]
sphinx_revealjs_quickstart = ["templates/*.jinja"]
